fixed dimensions that were overlapping nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ body {
     background-image: url( The-Phone.jpg);
 }
 #evidence2 > div {
-    margin-left: 150px;
+    margin-left: 170px;
     margin-right: 100px;
     margin-top: 240px;
     margin-bottom: 330px;
@@ -213,7 +213,7 @@ body {
 }
 
 #evidence3 > div {
-    margin-left: 150px;
+    margin-left: 170px;
     margin-right: 100px;
     margin-top: 240px;
     margin-bottom: 260px;
@@ -224,7 +224,7 @@ body {
 
 }
 #evidence4 > div {
-    margin-left: 150px;
+    margin-left: 170px;
     margin-right: 100px;
     margin-top: 240px;
     margin-bottom: 280px;
@@ -235,7 +235,7 @@ body {
   
 }
 #evidence5 > div {
-    margin-left: 150px;
+    margin-left: 190px;
     margin-right: 100px;
     margin-top: 240px;
     margin-bottom: 260px;
@@ -272,7 +272,7 @@ body {
     background-image: url( The-Viewing.jpg);
 }
 #viewing > div {
-    margin-left: 150px;
+    margin-left: 450px;
     margin-right: auto;
     margin-top: 240px;
     margin-bottom: 290px;
